--- a/src/blocks/product-card/__container-options/product-card__container-options.css
+++ b/src/blocks/product-card/__container-options/product-card__container-options.css
@@ -8,3 +8,9 @@
     box-sizing: border-box;
     width: 100%;
 }
+
+.buy-block_stickBottom .product-card__container-options {
+    bottom: 46px;
+    border-bottom: none;
+    border-top: 2px solid #000;
+}
